--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .container {
-  width: 22rem;
+  width: 23rem;
   height: 20rem;
   padding: 1rem;
   border: 1px solid rgb(214, 213, 213);
@@ -42,14 +42,14 @@ body {
 /* calculator btn style starts here!!! */
 
 /* btn */
-buttonqq{
+button {
   width: 100%;
   height: 100%;
 }
 
 .display {
   background-color: var(--clr-white);
-  height: 5rem;
+  height: 3rem;
   border: 1px solid rgb(214, 213, 213);
   justify-self: stretch;
   align-self: stretch;
